--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <button id="clear-board" onclick="resetBoard()">Clear Board</button>
     <div class="grid-container">
 
     </div>
