Add styling reminiscent of an actual Etch-A-Sketch

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="clear-board" onclick="resetBoard()">Clear Board</button>
+  <div class="outer-container">
     <div class="grid-container">
 
     </div>
+    <div class="bottom-row">
+      <div class="dial"></div>
+      <div class="center">
+        <div class="logo">Etch-A-Sketch</div>
+        <button id="clear-board" onclick="resetBoard()">Clear Board</button>
+      </div>
+      <div class="dial"></div>
+    </div>
+  </div>
 </body>
 </html>
